--- a/views/users/myPage.handlebars
+++ b/views/users/myPage.handlebars
@@ -70,7 +70,12 @@
         
     </div>
     <a href="/loggedIn">Back to Feed</a>
-{{!-- <script src="/public/js/ClientSideUpdateProfile.js"></script> --}}
+    <div id="errorcheck">
+        {{#if error}}
+        <p>{{error}}</p>
+        {{/if}}
+    </div>
+<script src="/public/js/ClientSideUpdateProfile.js"></script>
 <script>
         let profileButton = document.getElementById('profileButton')
         let likesButton = document.getElementById('likesButton')
