XSS and minor changes

--- a/views/recipe.handlebars
+++ b/views/recipe.handlebars
@@ -42,6 +42,7 @@
         <p>{{error}}</p>
         {{/if}}
     </div>
+    <script src="/public/js/clientSidePostAcomment.js"></script>
     <a href="/loggedIn">Back to Feed</a>
 </div>
 <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
