--- a/views/postArecipe.handlebars
+++ b/views/postArecipe.handlebars
@@ -1,22 +1,22 @@
 <h2>Cooked something new? Share with our users.</h2>
 <form action="/recipe/postArecipe" method="POST" id="post-a-recipe-form" enctype="multipart/form-data">
     <label for="recipeName">Enter a Recipe Name:</label>
-    <input type="text" placeholder="Enter the Recipe Name Here" id="recipeName" name="recipeName" required> 
+    <input type="text" placeholder="Enter the Recipe Name Here" id="recipeName" name="recipeName" > 
     <br><br>
     <label for="avatar">Upload Recipe Picture:</label>
-        <input type="file" id="avatar" name="avatar" accept="image/png, image/jpeg" required><br>
+        <input type="file" id="avatar" name="avatar" accept="image/png, image/jpeg" ><br>
     <br><br>
     <label for="recipeDescription">Enter Recipe Description:</label>
-    <textarea placeholder="Enter the Recipe description Here" id="recipeDescription" name="recipeDescription" required></textarea>
+    <textarea placeholder="Enter the Recipe description Here" id="recipeDescription" name="recipeDescription" ></textarea>
     <br><br>
     <label for="ingredients">Enter Ingredients:</label>
-    <textarea placeholder="Enter the Recipe Ingredients Here" id="ingredients" name="ingredients" required></textarea>
+    <textarea placeholder="Enter the Recipe Ingredients Here" id="ingredients" name="ingredients" ></textarea>
     <br><br>
     <label for="preppingDirections">Enter Prepping Directions:</label>
-    <textarea placeholder="Enter the Preparation Directions Here" id="preppingDirections" name="preppingDirections" required></textarea>
+    <textarea placeholder="Enter the Preparation Directions Here" id="preppingDirections" name="preppingDirections"></textarea>
     <br><br>
     <label for="cookingDirections">Enter Cooking Recipe:</label>
-    <textarea placeholder="Enter the Cooking Directions Here" id="cookingDirections" name="cookingDirections" required></textarea>
+    <textarea placeholder="Enter the Cooking Directions Here" id="cookingDirections" name="cookingDirections" ></textarea>
     <br><br>
     <label>
         <select id="cuisineType" name="cuisineType">
