--- a/views/users/myPage.handlebars
+++ b/views/users/myPage.handlebars
@@ -66,7 +66,7 @@
     </div>
     <div id='editPage' hidden>
         <h2 class='error'>{{error}}</h2>
-        <form method="POST" action="{{user._id}}/edit" enctype="multipart/form-data">
+        <form method="POST" action="{{user._id}}/edit" id="formForEditUser" enctype="multipart/form-data">
     
         <label for="profilePicture" >Profile Picture:</label>
         <input type="file" id="profilePicture" name="profilePicture" accept='image/png, image/jpg, image/jpeg'><br>
@@ -99,7 +99,6 @@
         <div class='table'>
         <ul class='recipeDisplay'>
                 {{#each user.recentlyViewedRecipes}}
-                   
                     <li class='recipeList'> 
                     <a  href="/recipe/post/{{_id}}"><img class='recipeListImage' alt='{{_id}} picture' src='/public/images/{{recipePicture}}'/></a><br>
                     <div class="recipeContent">
@@ -120,62 +119,4 @@
         {{/if}}
     </div>
 <script src="/public/js/ClientSideUpdateProfile.js"></script>
-<script>
-        let profileButton = document.getElementById('profileButton')
-        let likesButton = document.getElementById('likesButton')
-        let profile = document.getElementById('profile')
-        let likes = document.getElementById('likes')
-        let editButton = document.getElementById('edit')
-        let editProfile = document.getElementById('editPage')   
-        let cancelButton = document.getElementById('cancel')
-        let recents = document.getElementById('recents')   
-        let recentsButton = document.getElementById('recentsButton')
 
-        likesButton.addEventListener('click',(event)=>{
-            profile.hidden = true;
-            likesButton.hidden = true;
-            profileButton.hidden = false;
-            likes.hidden = false;
-            editProfile.hidden = true;
-            recentsButton.hidden = false;
-            recents.hidden = true;
-        }) 
-        profileButton.addEventListener('click',(event)=>{
-            profile.hidden = false;
-            likesButton.hidden = false;
-            profileButton.hidden = true;
-            likes.hidden = true;
-            editProfile.hidden = true;
-            recentsButton.hidden = false;
-            recents.hidden = true;
-        })
-        editButton.addEventListener('click',(event)=>{
-            profile.hidden = true;
-            likesButton.hidden = true;
-            profileButton.hidden = true;
-            likes.hidden = true;
-            editProfile.hidden = false;
-            recentsButton.hidden = true;
-            recents.hidden = true;
-            
-        })          
-        cancelButton.addEventListener('click',(event)=>{
-            profile.hidden = false;
-            likesButton.hidden = false;
-            profileButton.hidden = true;
-            likes.hidden = true;
-            editProfile.hidden = true;
-            recentsButton.hidden = false;
-            recents.hidden = true;
-        })
-        recentsButton.addEventListener('click',(event)=>{
-            profile.hidden = true;
-            likesButton.hidden = false;
-            profileButton.hidden = false;
-            likes.hidden = true;
-            editProfile.hidden = true;
-            recentsButton.hidden = true;
-            recents.hidden = false;
-        })
-
-</script>
